bootstrap/battery-simulation/components/data-ingester/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: data-ingester-jvm
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"mqtt-broker-ss"},{"apiVersion":"apps/v1","kind":"StatefulSet","name":"influxdb"}]'
  labels:
    app: data-ingester-jvm
    app.kubernetes.io/component: data-ingester-jvm
    app.kubernetes.io/instance: data-ingester-jvm
    app.kubernetes.io/name: data-ingester-jvm
    app.kubernetes.io/part-of: metrics-processors
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-ingester-jvm
  template:
    metadata:
      labels:
        app: data-ingester-jvm
        deployment: data-ingester-jvm
    spec:
      containers:
        - name: data-ingester-jvm
          image: 'quay.io/oschneid/data-ingester-jvm:agv-1.0'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
