bootstrap/battery-simulation/components/data-ingester/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: data-ingester-jvm
  labels:
    app: data-ingester-jvm
    app.kubernetes.io/component: data-ingester-jvm
    app.kubernetes.io/instance: data-ingester-jvm
    app.kubernetes.io/name: data-ingester-jvm
    app.kubernetes.io/part-of: battery-simulation
spec:
  ports:
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8089-tcp
      protocol: TCP
      port: 8089
      targetPort: 8089
  type: ClusterIP
  selector:
    app: data-ingester-jvm
    deployment: data-ingester-jvm
