bootstrap/battery-simulation/components/data-ingester/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: data-ingester-jvm
  labels:
    app: data-ingester-jvm
    app.kubernetes.io/component: data-ingester-jvm
    app.kubernetes.io/instance: data-ingester-jvm
    app.kubernetes.io/name: data-ingester-jvm
    app.kubernetes.io/part-of: battery-simulation
spec:
  to:
    kind: Service
    name: data-ingester-jvm
    weight: 100
  port:
    targetPort: 8089-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
